@@ -1,13 +1,14 @@
-7fdcb1c255cc40c49d411c49e52e0cbb *ChangeLog
-023042a9e1ca23bc22379d2bcc9923de *DESCRIPTION
+cfc80dd88689dc14141636d0994e79d9 *ChangeLog
+3f457d70c20ca16acfc612d236137988 *DESCRIPTION
 eb723b61539feef013de476e68b5c50a *GPL-2
 c843826752e9f806f255d79801354abb *INDEX
+63161a0a16a64cefc52314184570dcb4 *LICENCE.note
 3366a7aaa6da8defd9b494df600c00d3 *NAMESPACE
 a69f227702dfa422d55d1f5f4556617b *R/VarCorr.R
 bd767290af84265d2180b2949be4e03c *R/VarCov.R
 21f2feadc144029ef5491ea00e807f33 *R/corStruct.R
-92f1928c4f6534c4166448d89e7105c4 *R/gls.R
-cf62146c281a460c541c0f721e4702c1 *R/gnls.R
+25827e7dad8d8ee59bf95f993a796115 *R/gls.R
+ca5726a6b9b7c8e7e4d16393cb8f7445 *R/gnls.R
 7410876e14a525c89a79066824cea443 *R/groupedData.R
 cd3b3bd10ab69ef7ecd57981fe329909 *R/lmList.R
 18ace607ad0a0ae0ecebee3041cf8ece *R/lme.R
@@ -15,7 +16,7 @@ af2f788abe03df9e2b27cbc91466b62c *R/modelStruct.R
 9a27adb3dfd190a36997030b6e631803 *R/newFunc.R
 736dc3a6d393afbd18cc2b0703397ef5 *R/newGenerics.R
 eee478e649a127a38eaa92161c909cd5 *R/newMethods.R
-8c8ee792d26f53bb34f4725de05baa94 *R/nlme.R
+95742bf508cc166c206b7f5147bc687b *R/nlme.R
 9cbca165f38f8ed2dc244ef3fe04ff90 *R/nlsList.R
 243f1e4285fc0832d03d0441ea8594e3 *R/pdMat.R
 b6e1428bc8d4062a23f2ac3085e07f3c *R/reStruct.R
@@ -65,7 +66,6 @@ e174f8f71cab6ed341577ff31036cf7b *data/Wheat2.rda
 6526b92c436e1496d2753917e21354d9 *data/bdf.rda
 b1bd9c2311906426ed6c2e7c71b0cae6 *data/ergoStool.rda
 baa725853611bb054c131fbee8254167 *inst/CITATION
-63161a0a16a64cefc52314184570dcb4 *inst/LICENCE
 64501fa44a098a7b4c9148de789bacf4 *inst/mlbook/README
 fd6efb34026508f27de122da7d5e712f *inst/mlbook/ch04.R
 9404575eddb8ed2cbb53d645df35210a *inst/mlbook/ch05.R
